Fixed some layout issues

--- a/static/blog/style.css
+++ b/static/blog/style.css
@@ -9,22 +9,33 @@ html, body {
 
 header {
     width: 100%;
-    height: 60px;
+    height: 40px;
     position: fixed;
     top: 0;
-    border: 4px solid #00CC00;
+    border: 2px dotted #00CC00;
+    background-color: #00CC00;
+    color: #000000;
 }
 
-aside {
-    width: 20%;
+h1 {
+    padding: 0 0;
+    margin: 0;
+}
+
+nav {
+    width: 15%;
     float: left;
     padding: 64px 0;
+    border-right: #00CC00 solid 4px;
+    margin-right: 10px;
+    height: 100%;
 }
 
 section {
     width: 80%;
     margin: 0 auto;
     padding: 70px 0;
+    float: left;
 }
 
 footer {
@@ -34,6 +45,8 @@ footer {
     bottom: 0;
     border: 4px solid #00CC00;
     text-align: center;
+    background-color: #00CC00;
+    color: #000000;
 }
 
 a:link, a:active {
@@ -49,4 +62,5 @@ a:hover {
     color: blue;
     text-decoration: underline overline;
     text-decoration-color: #00CC00;
+
 }
